--- a/commutative/week13.tex
+++ b/commutative/week13.tex
@@ -527,11 +527,12 @@ $\mf_1^{n_1} \mf_2^{n_2} \dotsm \mf_k^{n_k} = \gen{0}$.
         If not, let $p + aR = P_1 \dotsm P_k$ and $p + a^2 R = Q_1 \dotsm Q_r$
         with $a \notin p$.
         Since $P_i, Q_j \supset p$, passing to the quotient $R/p$, we have
-        $\bar{a} = \bar P_1 \dotsm \bar P_k, \, \bar{a}^2 = \bar Q_1 \dotsm \bar Q_r$.
+        $\gen{\bar{a}} = \bar P_1 \dotsm \bar P_k,\,
+        \gen{\bar{a}^2} = \bar Q_1 \dotsm \bar Q_r$.
         Using the uniqueness of factorization, which only requires $R/p$
         to be an integral domain (which is the case) and $\bar P_i, \bar Q_j$
         be invertible (by lemma above),
-        by $\bar{a}^2 = \bar P_1^2 \dotsm \bar P_k^2 = \bar Q_1 \dotsm \bar Q_r$,
+        by $\gen{\bar{a}^2} = \bar P_1^2 \dotsm \bar P_k^2 = \bar Q_1 \dotsm \bar Q_r$,
         we have $2k = r$ and we could assume $Q_{2i-1} = Q_{2i} = P_i$.
         This shows that $p + a^2 R = (p + aR)^2 \subseteq p^2 + aR$.
         So $p \subseteq p + a^2 R \subseteq p^2 + aR$. Now, if $x \in p$,
