--- a/commutative/week12.tex
+++ b/commutative/week12.tex
@@ -465,5 +465,6 @@ We list some facts about localization.
     Then we can say $P_1 \cap K[y_1, \dots, y_n] = \gen{y_n}$.
     Then we can consider $\quot{K[x_1, \dots, x_n]}{P_1}$ and
     $\quot{K[y_1, \dots, y_n]}{\gen{y_n}} \cong K[y_1, \dots, y_{n-1}]$.
+    By induction hypothesis, we can say $m - 1 = n - 1$. Done.
   \end{proof}
 \end{theorem}
