--- a/commutative/week13.tex
+++ b/commutative/week13.tex
@@ -546,7 +546,7 @@ $\mf_1^{n_1} \mf_2^{n_2} \dotsm \mf_k^{n_k} = \gen{0}$.
         let $a \in p$ and $p \supseteq \gen{a} = P_1 \dotsm P_k$, by the lemma above,
         each $P_i$ is invertible and thus maximal by the previous paragraph.
         Since $P_1 \dotsm P_k \subset p$, we have $P_i \subset p$ for some $i$,
-        which implies $P_i = p$ since $P_i$ is maximaw. Thus $p$ is invertible.
+        which implies $P_i = p$ since $P_i$ is maximal. Thus $p$ is invertible.
 
         Finally, since each ideal is the product of prime ideals,
         and we've just proved that prime ideals are invertible,
