--- a/homology/week16.tex
+++ b/homology/week16.tex
@@ -3,19 +3,25 @@
 In this section, we assume that $R$ is commutative with $1$.
 \begin{definition}
   Let $L \in \Mod_R$, with $f: L \to R$ an $R$-linear map, define
-  $$\deffunc{\dd_f}{\Lambda^n L}{\Lambda^{n-1} L}{x_1 \we \cdots \we x_n}
-  {\sum\limits_{i=1}^n (-1)^{i+1} f(x_i) x_1 \we \cdots \we \hat{x}_i \we
-  \cdots \we x_n}$$
+  \[
+    \deffunc{\dd_f}{\Lambda^n L}{\Lambda^{n-1} L}{x_1 \we \cdots \we x_n}
+    {\sum\limits_{i=1}^n (-1)^{i+1} f(x_i) x_1 \we \cdots \we \hat{x}_i \we
+    \cdots \we x_n}
+  \]
   where $\Lambda^n L$ is the $n$-th exterior power of $L$, and $\hat{x}_i$ means
   omitting $x_i$.
 
   Then we can define a chain complex called {\bf Koszul complex}:
-  $$K_\bullet(f) : \cdots \to \Lambda^n L \xto{\dd_f} \Lambda^{n-1} L \to \cdots \to
-  \Lambda^2 L \xto{\dd_f} L \xto{f} R$$
+  \[
+    K_\bullet(f) : \cdots \to \Lambda^n L \xto{\dd_f} \Lambda^{n-1} L \to \cdots \to
+    \Lambda^2 L \xto{\dd_f} L \xto{f} R
+  \]
 
   Also, $\dd_f$ can be considered as a graded $R$-homomorphism of degree $-1$:
-  $$\deffunc{\dd_f}{\Lambda L}{\Lambda L}{x \we y}
-  {\dd_f(x) \we y + (-1)^{\deg x}\cdot x \we \dd_f(y)}$$
+  \[
+    \deffunc{\dd_f}{\Lambda L}{\Lambda L}{x \we y}
+    {\dd_f(x) \we y + (-1)^{\deg x}\cdot x \we \dd_f(y)}
+  \]
   where $\Lambda L$ is the exterior algebra of $L$, and $x, y$ are any homogeneous 
   elements of $\Lambda L$.
 \end{definition}
@@ -23,12 +29,16 @@ In this section, we assume that $R$ is commutative with $1$.
 \begin{definition}
   Let $(C_\bullet, d), (C_\bullet', d')$ be chain complexes of $R$-modules, 
   define their {\it tensor product} to be a chain complex $C_\bullet \Ot C_\bullet'$ with
-  $$\left( C_\bullet \Ot C_\bullet' \right)_n = 
-  \bigoplus\limits_{i=0}^n \left( C_i \Ot_R C_{n-i}' \right)$$
+  \[
+    \left( C_\bullet \Ot C_\bullet' \right)_n = 
+    \bigoplus\limits_{i=0}^n \left( C_i \Ot_R C_{n-i}' \right)
+  \]
   with the boundary maps being
-  $$\deffunc{d \Ot d'}{(C_\bullet \Ot C_\bullet')_n}{(C_\bullet \Ot C_\bullet')_{n-1}}
-  {\sum\limits_{i=0}^n x_i \Ot y_{n-i}}{\sum\limits_{i=0}^n 
-  \left( d(x_i) \Ot y_{n-i} + (-1)^i \cdot x_i \Ot d'(y_{n-i}) \right)}$$
+  \[
+    \deffunc{d \Ot d'}{(C_\bullet \Ot C_\bullet')_n}{(C_\bullet \Ot C_\bullet')_{n-1}}
+    {\sum\limits_{i=0}^n x_i \Ot y_{n-i}}{\sum\limits_{i=0}^n 
+    \left( d(x_i) \Ot y_{n-i} + (-1)^i \cdot x_i \Ot d'(y_{n-i}) \right)}
+  \]
 
   One can verify that 
   \begin{align*}
@@ -43,7 +53,7 @@ In this section, we assume that $R$ is commutative with $1$.
 \begin{prop}
   Let $L_1, L_2 \in \Mod_R, f_1 \in \Hom_R(L_1, R), f_2 \in \Hom_R(L_2, R)$.
   Define
-  $$\deffunc{f = f_1 + f_2}{L_1 \Op L_2}{R}{(x, y)}{f_1(x) + f_2(y)}, $$
+  \[ \deffunc{f = f_1 + f_2}{L_1 \Op L_2}{R}{(x, y)}{f_1(x) + f_2(y),} \]
   then 
   \begin{eqnarray*}
     K_\bullet(f_1) \Ot K_\bullet(f_2) &\cong& K_\bullet(f) \\
@@ -60,11 +70,11 @@ In this section, we assume that $R$ is commutative with $1$.
 
 \begin{definition}
   Let $L = \bigoplus\limits_{i=1}^n R e_i$ be a free $R$-module, and 
-  $\mathbf{x} =(x_1, \cdots, x_n)$ with $x_i \in R$, define
-  $$
-  K_\bullet(\mathbf{x}) \defeq K_\bullet(f), \textrm{with }
-  \deffunc{f}{L}{R}{e_i}{x_i}.
-  $$
+  $\mathbf{x} =(x_1, \dots, x_n)$ with $x_i \in R$, define
+  \[
+    K_\bullet(\mathbf{x}) \defeq K_\bullet(f), \textrm{with }
+    \deffunc{f}{L}{R}{e_i}{x_i.}
+  \]
 \end{definition}
 
 \begin{coro}
@@ -76,59 +86,59 @@ In this section, we assume that $R$ is commutative with $1$.
 \begin{prop}
   Let $x \in R$ and $(C_\bullet, \partial)$ be a chain complex of $R$-modules,
   then there exist $\rho, \pi$ s.t.
-  $$
-  0 \to C_\bullet \xto{\rho} C_\bullet \Ot K_\bullet(x) \xto{\pi} C_\bullet(-1) \to 0
-  $$
+  \[
+    0 \to C_\bullet \xto{\rho} C_\bullet \Ot K_\bullet(x) \xto{\pi} C_\bullet(-1) \to 0
+  \]
   is exact, where $\left( C_\bullet(-1) \right)_n = C_{n-1}$.
 
   \begin{proof}
     Since $K_\bullet(x) : 0 \to R \xto{x} R$, so
-    $$
-    (C_\bullet \Ot K_\bullet(x))_n = (C_i \Ot_R R) \Op (C_{i-1} \Ot_R R),
-    $$
+    \[
+      (C_\bullet \Ot K_\bullet(x))_n = (C_i \Ot_R R) \Op (C_{i-1} \Ot_R R),
+    \]
     and the boundary map is
-    $$
-    \deffunc{\dd}{(C_i \Ot_R R) \Op (C_{i-1} \Ot_R R)}{(C_{i-1} \Ot_R R) \Op (C_{i-2} \Ot_R R)}
-    {(z_1 \Ot r_1, z_2 \Ot r_2)}
-    {\left( \partial z_1 \Ot r_1 + (-1)^{i-1} z_2 \Ot x r_2,
-    \partial z_2 \Ot r_2 \right)}.
-    $$
-    Under the isomorphism $C_i \Ot_r R \cong C_i$, the boundary map become
-    $$
-    \deffunc{\dd}{C_i \Op C_{i-1}}{C_{i-1} \Op C_{i-2}}
-    {
-    \begin{pmatrix}
-      r_1 z_1 \\ r_2 z_2
-    \end{pmatrix}
-    }
-    {
-    \begingroup
-    \setlength\arraycolsep{4pt}
-    \begin{pmatrix}
-      \partial & (-1)^{i-1} x \\ 0 & \partial
-    \end{pmatrix}
-    \begin{pmatrix}
-      r_1 z_1 \\ r_2 z_2
-    \end{pmatrix}
-    \endgroup
-    }
-    $$
+    \[
+      \deffunc{\dd}{(C_i \Ot_R R) \Op (C_{i-1} \Ot_R R)}{(C_{i-1} \Ot_R R) \Op (C_{i-2} \Ot_R R)}
+      {(z_1 \Ot r_1, z_2 \Ot r_2)}
+      {\left( \partial z_1 \Ot r_1 + (-1)^{i-1} z_2 \Ot x r_2,
+      \partial z_2 \Ot r_2 \right).}
+    \]
+    Under the isomorphism $C_i \Ot_R R \cong C_i$, the boundary map become
+    \[
+      \deffunc{\dd}{C_i \Op C_{i-1}}{C_{i-1} \Op C_{i-2}}
+      {
+      \begin{pmatrix}
+        r_1 z_1 \\ r_2 z_2
+      \end{pmatrix}
+      }
+      {
+      \begingroup
+      \setlength\arraycolsep{4pt}
+      \begin{pmatrix}
+        \partial & (-1)^{i-1} x \\ 0 & \partial
+      \end{pmatrix}
+      \begin{pmatrix}
+        r_1 z_1 \\ r_2 z_2
+      \end{pmatrix}
+      \endgroup
+      }
+    \]
     Let 
-    $$
+    \[
       \deffunc{\rho_i}{C_i}{C_i \Op C_{i-1}}{z_1}{(z_1, 0)}
       \quad \text{and} \quad
       \deffunc{\pi_i}{C_i \Op C_{i-1}}{C_{i-1}}{(z_1, z_2)}{z_2}
-    $$
+    \]
     then
-    $$
-    \begin{tikzcd}[cramped]
-      0 \ar[r] & C_i \ar[r, "\rho_i"] \ar[d, "\partial"] & 
-      C_i \Op C_{i-1} \ar[r, "\pi_i"] \ar[d, "\dd"] 
-      & C_{i-1} \ar[r] \ar[d, "\partial"] & 0 \\
-      0 \ar[r] & C_{i-1} \ar[r, "\rho_{i-1}"] & 
-      C_{i-1} \Op C_{i-2} \ar[r, "\pi_{i-1}"] & C_{i-2} \ar[r] & 0
-    \end{tikzcd}
-    $$
+    \[
+      \begin{tikzcd}[cramped]
+        0 \ar[r] & C_i \ar[r, "\rho_i"] \ar[d, "\partial"] & 
+        C_i \Op C_{i-1} \ar[r, "\pi_i"] \ar[d, "\dd"] 
+        & C_{i-1} \ar[r] \ar[d, "\partial"] & 0 \\
+        0 \ar[r] & C_{i-1} \ar[r, "\rho_{i-1}"] & 
+        C_{i-1} \Op C_{i-2} \ar[r, "\pi_{i-1}"] & C_{i-2} \ar[r] & 0
+      \end{tikzcd}
+    \]
     commutes and exact:
     \begin{itemize}
       \item $\dd \circ \rho (z_1) = \dd (z_1, 0) = (\partial z_1, 0)$
@@ -142,16 +152,18 @@ In this section, we assume that $R$ is commutative with $1$.
 
 \begin{coro}
   This induces a long exact sequence
-  $$
-  \cdots \to H_i(C_\bullet) \xto{\rho_*} H_i(C_\bullet \Ot K_\bullet(x)) \xto{\pi_*} 
-  H_i(C_\bullet(-1)) \xto{\pm x} H_{i-1}(C_\bullet) \to \cdots.
-  $$
+  \[
+    \cdots \to H_i(C_\bullet) \xto{\rho_*} H_i(C_\bullet \Ot K_\bullet(x)) \xto{\pi_*} 
+    H_i(C_\bullet(-1)) \xto{\pm x} H_{i-1}(C_\bullet) \to \cdots
+  \]
   \begin{proof}
     We only need to show the connection homomorphism is indeed $\pm x$.
 
     Given $z \in C_{i-1}$ with $\partial z = 0$, 
-    $$z \xmapsto{\pi^{-1}} (0, z) \xmapsto{d} \left((-1)^{i-1}xz, 0\right) \xmapsto{\rho^{-1}}
-    (-1)^{i-1} xz.$$
+    \[
+      z \xmapsto{\pi^{-1}} (0, z) \xmapsto{d} \left((-1)^{i-1}xz, 0\right)
+      \xmapsto{\rho^{-1}} (-1)^{i-1} xz.
+    \]
   \end{proof}
 \end{coro}
 
@@ -166,16 +178,16 @@ In this section, we assume that $R$ is commutative with $1$.
 
   \begin{proof}
     Let 
-    $$
-    \deffunc{\phi_i}{C_i \Op C_{i-1}}{C_i / x C_i}{(z_1, z_2)}{\ob{z_1}},
-    $$
+    \[
+      \deffunc{\phi_i}{C_i \Op C_{i-1}}{C_i / x C_i}{(z_1, z_2)}{\ob{z_1},}
+    \]
     then
-    $$
-    \begin{tikzcd}[cramped]
-      C_i \Op C_{i-1} \ar[r, "\phi_i"] \ar[d, "\dd_i"] & C_i/x C_i \ar[d, "\ob{\partial}_i"] \\
-      C_{i-1} \Op C_{i-2} \ar[r, "\phi_{i-1}"] & C_{i-1}/x C_{i-1} 
-    \end{tikzcd}
-    $$
+    \[
+      \begin{tikzcd}[cramped]
+        C_i \Op C_{i-1} \ar[r, "\phi_i"] \ar[d, "\dd_i"] & C_i/x C_i \ar[d, "\ob{\partial}_i"] \\
+        C_{i-1} \Op C_{i-2} \ar[r, "\phi_{i-1}"] & C_{i-1}/x C_{i-1} 
+      \end{tikzcd}
+    \]
     commutes.
     \begin{itemize}
       \item $\ob{\partial} \circ \phi_i(z_1, z_2) = \ob{\partial}(z_1) = \ob{\partial z_1}$.
@@ -184,10 +196,10 @@ In this section, we assume that $R$ is commutative with $1$.
     \end{itemize}
 
     Now we need to show the induced maps
-    $$
-    \deffunc{\phi_{*i}}{\ker \dd_i / \im \dd_{i+1}}{\ker \ob{\partial}_i / \im \ob{\partial}_{i+1}}
-    {\ob{(z_1, z_2)}}{\ob{\ob{z_1}} = \ob{z_1} + \im \ob{\partial}_{i+1}}
-    $$
+    \[
+      \deffunc{\phi_{*i}}{\ker \dd_i / \im \dd_{i+1}}{\ker \ob{\partial}_i / \im \ob{\partial}_{i+1}}
+      {\ob{(z_1, z_2)}}{\ob{\ob{z_1}} = \ob{z_1} + \im \ob{\partial}_{i+1}}
+    \]
     are isomorphisms.
 
     \begin{itemize}
@@ -223,19 +235,19 @@ In this section, we assume that $R$ is commutative with $1$.
 \end{prop}
 
 \begin{definition}
-  Let $M \in \Mod_R$. A sequence $\set{a_1, \cdots, a_m}, m \ge 0$ is said to be
+  Let $M \in \Mod_R$. A sequence $\set{a_1, \dots, a_m}, m \ge 0$ is said to be
   $M$-regular if
   \begin{itemize}
-    \item $M/\gen{a_1, \cdots, a_m}M \neq 0$.
-    \item $a_{i+1}$ is not a zero divisor of $M/\gen{a_1, \cdots, a_i}M$ for 
+    \item $M/\gen{a_1, \dots, a_m}M \neq 0$.
+    \item $a_{i+1}$ is not a zero divisor of $M/\gen{a_1, \dots, a_i}M$ for 
       $0 \le i \le m-1$.
   \end{itemize}
 \end{definition}
 
 \begin{theorem}
-  If $\mathbf{x} = (x_1, \cdots, x_n)$ is an $R$-regular sequence, then
-  $K_\bullet(\mathbf{x}) \to R/\gen{x_1, \cdots, x_n} \to 0$ is a free resolution of 
-  $R / \gen{x_1, \cdots, x_n}$.
+  If $\mathbf{x} = (x_1, \dots, x_n)$ is an $R$-regular sequence, then
+  $K_\bullet(\mathbf{x}) \to R/\gen{x_1, \dots, x_n} \to 0$ is a free resolution of 
+  $R / \gen{x_1, \dots, x_n}$.
 
   \begin{proof}
     Since its modules are
@@ -248,31 +260,31 @@ In this section, we assume that $R$ is commutative with $1$.
         $K_\bullet(x_1) : 0 \to R \xto{x_1} R \to R/\gen{x_1} \to 0$ exact.
 
       \item $n > 1$:  
-        Assume that $\mathbf{x}' = (x_1, \cdots, x_{n-1})$ and 
-        $K_\bullet(\mathbf{x}') \to R/\gen{x_1, \cdots, x_{n-1}} \to 0$ exact, 
+        Assume that $\mathbf{x}' = (x_1, \dots, x_{n-1})$ and 
+        $K_\bullet(\mathbf{x}') \to R/\gen{x_1, \dots, x_{n-1}} \to 0$ exact, 
         i.e. $H_i(K_\bullet(\mathbf{x}')) = 0$ for $i > 0$.
 
         Since we have $K_\bullet(\mathbf{x}) \cong K_\bullet(\mathbf{x}') \Ot 
         K_\bullet(x_n)$ and a long exact sequence
-        $$
-        \cdots \to H_i(K_\bullet(\mathbf{x}')) \to H_i(K_\bullet(\mathbf{x})) \to 
-        H_i(K_\bullet(\mathbf{x}')(-1)) \xto{\pm x_n} H_{i-1}(K_\bullet(\mathbf{x}')) \to \cdots
-        $$
+        \[
+          \cdots \to H_i(K_\bullet(\mathbf{x}')) \to H_i(K_\bullet(\mathbf{x})) \to 
+          H_i(K_\bullet(\mathbf{x}')(-1)) \xto{\pm x_n} H_{i-1}(K_\bullet(\mathbf{x}')) \to \cdots
+        \]
         where $H_i(K_\bullet(\mathbf{x}')(-1)) = H_{i-1}(K_\bullet(\mathbf{x}'))$.
 
         For $i > 1$, the sequence becomes
-        $$
-        \cdots \to 0 \to H_i(K_\bullet(\mathbf{x})) \to 0 \xto{\pm x_n} \cdots,
-        $$
+        \[
+          \cdots \to 0 \to H_i(K_\bullet(\mathbf{x})) \to 0 \xto{\pm x_n} \cdots,
+        \]
         so $H_i(K_\bullet(\mathbf{x})) = 0$. 
 
-        For $i = 1$, we have $H_0(K_\bullet(\mathbf{x}')) \cong R/\gen{x_1, \cdots, x_{n-1}}$, so
-        $$
-        0 \to H_1(K_\bullet(\mathbf{x})) \to R/\gen{x_1, \cdots, x_{n-1}} \xto{\pm x_n} 
-        R/\gen{x_1, \cdots, x_{n-1}}
-        $$
+        For $i = 1$, we have $H_0(K_\bullet(\mathbf{x}')) \cong R/\gen{x_1, \dots, x_{n-1}}$, so
+        \[
+          0 \to H_1(K_\bullet(\mathbf{x})) \to R/\gen{x_1, \dots, x_{n-1}} \xto{\pm x_n} 
+          R/\gen{x_1, \dots, x_{n-1}}
+        \]
 
-        But $x_n$ is not a zero divisor of $R/\gen{x_1, \cdots, x_{n-1}}$, so the map
+        But $x_n$ is not a zero divisor of $R/\gen{x_1, \dots, x_{n-1}}$, so the map
         $\pm x_n$ is 1-1, then $H_1(K_\bullet(\mathbf{x})) \cong \ker (\pm x_n) = 0$. 
     \end{itemize}
   \end{proof}
@@ -280,14 +292,14 @@ In this section, we assume that $R$ is commutative with $1$.
 
 \begin{example}
   Let $\mathbf{x} = (x_1, x_2)$, then
-  $$
-  K_\bullet(\mathbf{x}) : 0 \to R \xto{\alpha} R^2 \xto{\beta} R \xto{q} R/\gen{x_1, x_2} \to 0
-  $$
+  \[
+    K_\bullet(\mathbf{x}) : 0 \to R \xto{\alpha} R^2 \xto{\beta} R \xto{q} R/\gen{x_1, x_2} \to 0
+  \]
   with $\alpha : r \mapsto (-x_2r, x_1r)$ and $\beta : (r_1, r_2) \mapsto x_1r_1 + x_2r_2$.
 \end{example}
 
 \begin{coro}
-  Let $I = \gen{x_1, \cdots, x_n} \subset R$ be an ideal with $\set{x_1, \cdots, x_n}$ be $R$-regular, 
+  Let $I = \gen{x_1, \dots, x_n} \subset R$ be an ideal with $\set{x_1, \dots, x_n}$ be $R$-regular, 
   then $R/I$ has {\it projective dimension} $\mathrm{pd}(R/I) = n$, 
   i.e. the shortest projective resolution of $R/I$ has length $n$.
 
@@ -296,44 +308,44 @@ In this section, we assume that $R$ is commutative with $1$.
     we only need to show that there's no shorter ones.
 
     The left side of $K_\bullet(\mathbf{x})$ reads
-    $$
-    0 \to \Lambda^n R^n \xto{d_n} \Lambda^{n-1} R^n \to \cdots
-    $$
+    \[
+      0 \to \Lambda^n R^n \xto{d_n} \Lambda^{n-1} R^n \to \cdots
+    \]
 
     But 
-    $$
-    \Lambda^n R^n = R(e_1 \we \cdots \we e_n) \cong R, \quad
-    \Lambda^{n-1} R^n = \bigoplus\limits_{i=1}^n  R (e_1 \we \cdots \we \hat{e_i} \we \cdots \we e^n)
-    \cong R^n
-    $$
+    \[
+      \Lambda^n R^n = R(e_1 \we \dotsb \we e_n) \cong R, \quad
+      \Lambda^{n-1} R^n = \bigoplus\limits_{i=1}^n  R (e_1 \we \dotsb \we \hat{e_i} \we \dotsb \we e^n)
+      \cong R^n
+    \]
     so
-    $$
-    \deffunc{d_n}{R}{R^n}{r}{(x_1 r, -x_2 r, \cdots, (-1)^{n-1} x_n r)}
-    $$
+    \[
+      \deffunc{d_n}{R}{R^n}{r}{(x_1 r, -x_2 r, \dots, (-1)^{n-1} x_n r)}
+    \]
 
     Taking tensor with $R/I$, we get
-    $$
-    0 \to R \Ot_R R/I \xto{d_n \Ot \id} R^n \Ot_R R/I \to \cdots
-    $$
+    \[
+      0 \to R \Ot_R R/I \xto{d_n \Ot \id} R^n \Ot_R R/I \to \cdots
+    \]
     but $R \Ot_R R/I \cong R/I, R^n \Ot_R R/I \cong (R/I)^n$, so
-    $$
-    \deffunc{d_n \Ot \id}{R/I}{(R/I)^n}{\ob{r}}{(\ob{x_1r}, \ob{-x_2r}, \cdots, \ob{(-1)^{n-1}x_n r})}
-    $$
+    \[
+      \deffunc{d_n \Ot \id}{R/I}{(R/I)^n}{\ob{r}}{(\ob{x_1r}, \ob{-x_2r}, \dots, \ob{(-1)^{n-1}x_n r})}
+    \]
 
     Now, 
-    $$
-    \Tor_n(R/I, R/I) = H_n(K_\bullet(\mathbf{x}) \Ot R/I) = \ker (d_n \Ot \id)
-    = \Ann_{R/I} I = \set{\ob{r} \in R/I \mid rI = I} = R/I \neq 0.
-    $$
-    ($R/I \neq 0$ is because $\set{x_1, \cdots, x_n}$ is $R$-regular.)
+    \[
+      \Tor_n(R/I, R/I) = H_n(K_\bullet(\mathbf{x}) \Ot R/I) = \ker (d_n \Ot \id)
+      = \Ann_{R/I} I = \set{\ob{r} \in R/I \mid rI = I} = R/I \neq 0.
+    \]
+    ($R/I \neq 0$ is because $\set{x_1, \dots, x_n}$ is $R$-regular.)
     Thus, any projective resolution can't have length
     shorter than $n$ since that will imply $\Tor_n(R/I, R/I) = 0$.
   \end{proof}
 \end{coro}
 
 \begin{remark}
-  Let $I = \gen{x_1, \cdots, x_n}$ generated by $R$-regular sequence 
-  $\set{x_1, \cdots, x_n}$, then
+  Let $I = \gen{x_1, \dots, x_n}$ generated by $R$-regular sequence 
+  $\set{x_1, \dots, x_n}$, then
   \begin{itemize}
     \item $\Tor_n(R/I, M) \cong \Ann_M I$.
     \item $\Ext^n(R/I, M) \cong M/IM$.
@@ -610,5 +622,4 @@ letting $RF$ be a exact functor.
   and $Q(f) = [(\Id_X, f)]$. For the universal property, if $F$
   is another functor making every morphism in $S$ be invertible,
   then the functor $G$ exists uniquely by $G([(s, f)]) = F(f) F(s)^{-1}$.
-  By induction hypothesis, we can say $m - 1 = n - 1$. Done.
 \end{theorem}
