--- a/homology/week17.tex
+++ b/homology/week17.tex
@@ -365,7 +365,7 @@ induces a long exact sequence
     After proving this claim, we shall show that
     $\Hom_{K^+(R)[S_R^{-1}]}(X^\bullet, Y^\bullet)
     \cong \Hom_{K^+(A)[S^{-1}_A]}(X^\bullet, Y^\bullet)$. \\
-    {\bf We will use left roofs instead of right roofs defined before here.}
+    {\bf We will use right roofs instead of left roofs defined before here.}
     \begin{itemize}
       \item 1-1: If $(f, s) \cong (g, t)$ in $K^+(\Ac)[S^{-1}_\Ac]$, then
         \[ \begin{tikzcd}
