--- a/commutative/week10.tex
+++ b/commutative/week10.tex
@@ -137,7 +137,7 @@ The one-one correspondence is given by
 \end{lemma}
 
 \begin{theorem}[Weak form of Hilbert Nullstellensatz] \label{thm:weak-hilbert-null}
-  \[ I \subsetneq k[x_1, \dots, x_n] \implies v(I) \neq \varnothing \]
+  \[ I \subsetneq k[x_1, \dots, x_n] \implies \Vc(I) \neq \varnothing \]
 
   \begin{proof}
     Since $I$ proper, by lemma~\ref{lemma:max-ideal-exists},
