--- a/homology/week14.tex
+++ b/homology/week14.tex
@@ -299,7 +299,7 @@ $N$ is injective and $0 \to M \to N$?
 
     (2) $\Rightarrow$ (1):
     By theorem~\ref{thm:every-module-is-in-injective-module},
-    there is a module $N \subset M$ so that $N$ is injective.
+    there is an injective module $N$ s.t. $M \toone N$.
 
     Consider
     $
