Add some lost pieces

--- a/group/week1.tex
+++ b/group/week1.tex
@@ -12,9 +12,9 @@
     \item $\exists 1 \in G$ s.t. $1a = a1 = a, \forall a \in G$.
     \item $\exists a^{-1} \in G$ s.t. $aa^{-1} = a^{-1}a = 1$.
   \end{enumerate}
+  If only 1. holds, then $G$ is called a {\bf semigroup}.
+  If only 1., 2. holds, then $G$ is called a {\bf monoid}.
 \end{definition}
-
-CONCON
 
 \begin{definition}
   Let $G$ be a group. Then $G$ is said to be {\bf abelian} if
